vlib/v/checker/tests/struct_required_field.vv
struct Abc {
	f1 int [required]
	f2 int
	f3 int [required]
}

fn main() {
	_ = Abc{
		f1: 123
		f3: 789
	}
	_ = Abc{
		f1: 123
		f2: 789
	}
	_ = Abc{123, 456}
	_ = Abc{123, 456, 789}
}
